--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <br><br>
     <button onclick="updateText()">Change Text</button>
 
+    <p> THIS IS ONLY FOR TESTING PURPOSE</p>
+
     <script src="script.js"></script> <!-- Link to JavaScript -->
 </body>
 </html>
