add new feature

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <p id="repoText">This is a new repo</p>
     <br><br>
     <button onclick="updateText()">Change Text</button>
+    
+    <p> THIS IS ONLY FOR TP</p>
 
     <script src="script.js"></script> <!-- Link to JavaScript -->
 </body>
