--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <br><br>
     <button onclick="updateText()">Change Text</button>
     
-    <p> THIS IS ONLY FOR TP</p>
+    <p> THIS IS ONLY FOR TPG</p>
 
     <script src="script.js"></script> <!-- Link to JavaScript -->
 </body>
