dont know the error

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <br><br>
     <button onclick="updateText()">Change Text</button>
     
-    <p> THIS IS ONLY FOR TPG</p>
+    <p> THIS IS ONLY FOR TP (button)</p>
+
+
 
     <script src="script.js"></script> <!-- Link to JavaScript -->
 </body>
